--- a/block_simulations.ipynb
+++ b/block_simulations.ipynb
@@ -180,7 +180,7 @@
     "        bins=100)\n",
     "ax.grid()\n",
     "\n",
-    "ax.set_title(\"Spectral Distribution of Centered, Normalized $A_N, N=%s$, $A_N$ being block matrix with block probabilities $p=%s$\" % (n, probabilities))"
+    "ax.set_title(\"Spectral Distribution of $A_N, N=%s$, $A_N$ being block matrix with block probabilities $p=%s$\" % (n, probabilities))"
    ]
   },
   {
