--- a/centering_simulations.ipynb
+++ b/centering_simulations.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,6 @@
     "    Ln = np.identity(n) - np.matmul(np.matmul(Dn_inv_sqrt,An), Dn_inv_sqrt)\n",
     "\n",
     "    return Ln\n",
-    "\n",
     "\n",
     "\n",
     "def generate_Cn(An, p):\n",
@@ -119,20 +118,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 10000\n",
+    "n = 100\n",
     "p = 0.5\n",
     "x_range = np.linspace(-5, 5, 100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.15811388 0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.14142136 0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.13483997 ... 0.         0.         0.        ]\n",
+      " ...\n",
+      " [0.         0.         0.         ... 0.1490712  0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.15430335 0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.13736056]]\n",
+      "[[0.         0.02236068 0.         ... 0.02357023 0.         0.02171861]\n",
+      " [0.02236068 0.         0.         ... 0.         0.         0.        ]\n",
+      " [0.         0.         0.         ... 0.         0.         0.01852169]\n",
+      " ...\n",
+      " [0.02357023 0.         0.         ... 0.         0.02300219 0.0204765 ]\n",
+      " [0.         0.         0.         ... 0.02300219 0.         0.0211952 ]\n",
+      " [0.02171861 0.         0.01852169 ... 0.0204765  0.0211952  0.        ]]\n"
+     ]
+    }
+   ],
    "source": [
     "An = generate_An(n, p)\n",
     "Dn = generate_Dn(An)\n",
@@ -271,6 +291,26 @@
    ],
    "source": [
     "eigen_Cn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70.71067811865476"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sqrt(10000 * 0.5)"
    ]
   },
   {
